Fix broken scrollbar CSS on docs and blog

--- a/CSS/blog.scss
+++ b/CSS/blog.scss
@@ -1,64 +1,73 @@
-html .blog-wrapper {
+.blog-wrapper {
 
-    &::-webkit-scrollbar {
+    ::-webkit-scrollbar {
         width: 10px;
         height: 90%;
     }
 
-    &.table-of-contents {
+    .table-of-contents {
         display: none;
     }
 
-    &.pagination-nav__link {
+    .pagination-nav__link {
         border-color: rgb(2, 157, 187);
         border-style: solid;
         border-radius: 0;
         border-width: 1px;
     }
 
-    &.pagination-nav__link:hover {
+    .pagination-nav__link:hover {
         border-color: var(--ifm-pagination-nav-color-hover);
         text-decoration: none;
         color: var(--ifm-navbar-link-hover-color);
         box-shadow: 0 0 4px rgba(75, 242, 246, 0.65);
     }
 
-    &.container {
-        overflow-y: scroll;
-    }
-
-    &.navigation-with-keyboard {
+    .navigation-with-keyboard {
         overflow-y: hidden !important;
     }
 
-    &.navbar__logo {
+    .navbar__logo {
         display: none;
     }
 
-    &img {
+    img {
         border-color: rgb(2, 157, 187);
         border-style: solid;
         border-width: 4px;
     }
 
-    &aside.col {
+    aside.col {
         font-family: 'Electrolize', sans-serif;
         text-decoration: none;
         color: #acf9fb;
         text-shadow: rgba(172, 249, 251, 0.65) 0 0 4px;
     }
 
-    &.margin-vert--lg {
+    .margin-vert--lg {
         margin-top: 0px !important;
         margin-bottom: 0px !important;
     }
 
-    &.col--7 {
-        padding-top: 2rem;
-        padding-bottom: 2rem;
+    .col--7 {
+        padding-top: 1.5rem;
+        padding-bottom: 1.5rem;
     }
 
-    &.margin-bottom--xl {
+    .margin-bottom--xl {
         margin-bottom: 2rem !important;
+    }
+
+    body[class=""] {
+        overflow-y: hidden !important;
+    }
+
+    .container {
+        padding-left: 10%;
+        padding-right: 10%;
+        overflow-y: unset;
+    }
+    .main-wrapper {
+        overflow-y:scroll;
     }
 }
